--- a/pixelPets/pixelPetStyle.css
+++ b/pixelPets/pixelPetStyle.css
@@ -28,6 +28,10 @@ body{
 	border-style:solid;
 	border-width:1px;
 	border-color:#000000;
+	
+	-webkit-user-select: none; /* Chrome/Safari */        
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE10+ */
 }
 #ppMain{
 	float: left;
@@ -62,10 +66,12 @@ body{
 	font-size: 12px;
 	float: right;
 	margin-top:5px;
+	text-align: right;
 }
 .actionButton{
 	background: #ffffff;
 	color: #000000;
+	font-family: "Lucida Console", Monaco, monospace;
 	font-size:14px;
 	float:left;
 	cursor:pointer;
@@ -86,6 +92,28 @@ body{
 }
 .actionButton:hover{
 	outline: 2px solid black;
+}
+.actionButtonDisabled{
+	background: #dddddd;
+	color: #777777;
+	font-family: "Lucida Console", Monaco, monospace;
+	font-size:14px;
+	float:left;
+	cursor:default;
+	
+	padding: 10px;
+	padding-top:5px;
+	padding-bottom:5px;
+	margin: 10px;
+	
+	outline: 1px solid #555555;
+	
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 .clearer{
 	clear:both;
@@ -110,4 +138,49 @@ body{
 	border-style:solid;
 	border-width:1px;
 	border-color:#000000;
+}
+#overlay {
+     visibility: hidden;
+     position: fixed;
+     left: 0;
+     top: 0;
+     width: 100%;
+     height: 100%;
+     text-align:center;
+     z-index: 200;
+	 background-color: #ceb6c3;
+     opacity:0.7;
+	 filter:alpha(opacity=70);
+}
+#overlay2{
+     visibility: hidden;
+     position: fixed;
+     left: 0;
+     top: 0;
+     width: 100%;
+     height: 100%;
+     text-align:center;
+     z-index: 400;
+}
+#notification {
+     width:320px;
+     margin: 100px auto;
+	 position: relative;
+	 left: 49px;
+	 top: 32px;
+     background-color: #ffffff;
+     border:1px solid #000;
+     padding:15px;
+     text-align:center;
+	 box-shadow: rgba(0, 0, 0, .2) 4px 4px 5px;
+}
+#closeNote{
+	position: relative;
+	top: -6px;
+	right: -3px;
+	float: right;
+	text-decoration:none;
+}
+input[type="text"]{
+	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif
 }
