--- a/PPWeb/pixelPets/pixelPetStyle.css
+++ b/PPWeb/pixelPets/pixelPetStyle.css
@@ -48,6 +48,7 @@ body{
 	padding: 10px;
 }
 .genericPetImageContainer{
+	cursor: pointer;
 	width:128px; 
 	height:128px;
 	background:rgb(255, 255, 255);
@@ -57,27 +58,16 @@ body{
 	border-color:#000000; 
 	margin:0px auto;
 	padding: 4px;
+	
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 .genericPetImage{
 	width: 128px;
-	height: 128px;
-}
-.genericPlantImageContainer{
-	width:96px; 
-	height:128px;
-	background:rgb(255, 255, 255);
-	background:rgba(255, 255, 255, 0.7); 
-	border-style:solid; 
-	border-width:1px; 
-	border-color:#000000; 
-	margin:0px auto;
-	margin-right: 8px;
-	margin-left: 8px;
-	padding: 4px;
-	float: left;
-}
-.genericPetImage{
-	width: 96px;
 	height: 128px;
 }
 #footer{
