--- a/PPWeb/pixelPets/pixelPetStyle.css
+++ b/PPWeb/pixelPets/pixelPetStyle.css
@@ -56,6 +56,28 @@ body{
 	-moz-user-select: none; /* Firefox */
 	-ms-user-select: none; /* IE10+ */
 }
+.navButtonCodexInactive{
+	width: 45px;
+	background: #dddddd;
+	font-size: 10px;
+	font-weight: bold;
+	text-align: center;
+	float: left;
+	
+	margin-right:4px;
+	margin-bottom:10px;
+	padding:3px;
+	padding-top:8px;
+	padding-bottom:8px;
+	
+	border-style:solid;
+	border-width:1px;
+	border-color:#000000;
+	
+	-webkit-user-select: none; /* Chrome/Safari */        
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE10+ */
+}
 #ppMain{
 	float: left;
 	background: #dddddd;
