--- a/pixelPets/pixelPetStyle.css
+++ b/pixelPets/pixelPetStyle.css
@@ -33,6 +33,15 @@ body{
 	-moz-user-select: none; /* Firefox */
 	-ms-user-select: none; /* IE10+ */
 }
+.navButtonPet{
+	float:left;
+	padding-left:30px;
+	padding-right:20px;
+	width:45px;
+	max-width:45px;
+	white-space:nowrap;
+	text-align:left;
+}
 .navButtonCodex{
 	width: 45px;
 	background: #dddddd;
